Fix hover flickering

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -84,8 +84,7 @@ td>.mdc-button {
 
 .symbol,
 .button {
-  line-height: 8rem;
-  font-size: 8rem;
+  font-size: 5rem;
   font-family: fantasy;
   font-weight: bold;
 }
@@ -115,6 +114,11 @@ td>.mdc-button {
   appearance: none;
   -webkit-appearance: none;
   padding: 0;
+  border: 1px solid transparent;
+  transition: opacity .5s ease-out;
+  -moz-transition: opacity .5s ease-out;
+  -webkit-transition: opacity .5s ease-out;
+  -o-transition: opacity .5s ease-out;
 }
 
 @media (hover: hover) {
@@ -122,7 +126,6 @@ td>.mdc-button {
   .button:active {
     color: black;
     opacity: 1;
-    border: 0;
   }
 }
 
